prevent reload on map closing, css align fix

--- a/screen.css
+++ b/screen.css
@@ -136,7 +136,7 @@ section pre {
     color: #f00;
     display: block;
     margin: 20px auto 20px;
-    padding: 20px 30px;
+    padding: 20px 0;
     text-align: center;
     text-decoration: none;
 }
